--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -33,6 +33,7 @@ img {
   border: 5px transparent;
 }
 
+
 h1,
 h2,
 h3,
@@ -106,11 +107,19 @@ footer {
 
 .image-container img {
   vertical-align: top;
-  border: 5px solid #747c92;
+  margin:35px;
+  height: 300px;
+  width: 300px;
 }
 
 .image-container img:first-of-type {
-  vertical-align: bottom;
+  border:5px solid #ee20e0;
+}
+.image-container img:nth-of-type(2) {
+  border: 5px solid #19ea54;
+}
+.image-container img:last-of-type {
+  border: 5px solid #f3de3d;
 }
 
 .tigers {
