3.Fondo de la clase Tigers cambio a un tono mas claro y se eliminaron los subtitulos

--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -123,12 +123,12 @@ footer {
 }
 
 .tigers {
-  background-color: #0b3c49;
-  color: #f0e100;
+  background-color: #F3FDA5;
+  color: #0074f0;
 }
 
 .giraffe {
-  background-color: #465775;
+  background-color: #113274;
   color: #56e39f;
 }
 
