--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: sans-serif;
+  line-height: 30px;
 }
 
 header {
@@ -221,5 +222,7 @@ footer {
 /*Programs*/
 
 .programs .card {
-  display: block;
+  display: inline-block;
+  padding: 10px;
+  margin: 5px;
 }
