--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -211,8 +211,9 @@ footer {
 .membership {
   text-align: center;
   background-color: #fffffc;
-  width: 700px;
-  margin-left: 20%;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .membership h2 {
