--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -94,9 +94,9 @@ footer {
   border-radius: 50%;
   display: inline-block;
   position: fixed;
-  bottom: 20px;
   right: 20px;
-
+  transition: all 1s ease;
+  top: 14px;
   display: flex;
   justify-content: center;
   align-content: center;
